--- a/public/styles/tailwind.css
+++ b/public/styles/tailwind.css
@@ -5,10 +5,10 @@
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
      
     input[type="range"]::-webkit-slider-thumb {
-        width: 0px;
+        width: 40px;
         -webkit-appearance: none;
           appearance: none;
-        height: 100%;
+        height: 400px;
         cursor: pointer;
         background: #FFF;
         box-shadow: -2000px 0 0 2000px #605E5C;       
